tests/ui/traits/const-traits/call-generic-method-fail.stderr
error[E0277]: the trait bound `T: ~const PartialEq` is not satisfied
  --> $DIR/call-generic-method-fail.rs:4:5
   |
LL |     *t == *t
   |     ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
